<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.stefanofornari</groupId>
    <artifactId>quick-question</artifactId>
    <version>0.0.0-SNAPSHOT</version>
    <name>Quick Question</name>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <wiremock.version>3.13.2</wiremock.version>
        <mainClass>ste.ai.qq.demo.QuickQuestionDemo</mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <assertj.version>3.26.3</assertj.version>
        <javafx.version>21.0.10</javafx.version>
        <atlantafx.version>2.0.1</atlantafx.version>
        <junit.jupiter.version>5.11.0</junit.jupiter.version>
        <testfx.version>4.0.18</testfx.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>${atlantafx.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.dirs</groupId>
            <artifactId>directories</artifactId>
            <version>26</version>
        </dependency>
        <dependency>
            <groupId>com.github.stefanofornari</groupId>
            <artifactId>vncviewerfx</artifactId>
            <version>0.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>21.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.stefanbirkner</groupId>
            <artifactId>system-lambda</artifactId>
            <version>1.2.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <options>
                        <option>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</option>
                        <option>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</option>
                        <option>--add-opens=java.desktop/java.awt=ALL-UNNAMED</option>
                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
                        <option>-Djava.util.logging.config.file=src/main/resources/logging.properties</option>
                        <!--<option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>-->
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <useModulePath>false</useModulePath>
                    <includes>
                        <include>**/*Spec.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <testfx.robot>glass</testfx.robot>
                        <testfx.headless>true</testfx.headless>
                        <prism.order>true</prism.order>
                        <prism.order>sw</prism.order>
                        <prism.text>t2k</prism.text>
                        <java.awt.headless>true</java.awt.headless>
                        <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
                        <artifactVersion>${project.version}</artifactVersion>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
